--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <h1 class="heading">Web Design Competition Guide</h1>
     <article style="margin-inline: 30%;">
         1. <a href="https://www.youtube.com/watch?v=HcOc7P5BMi4" target="_blank">HTML Tutorial for Beginners | Complete
-            HTML with Notes & Code</a>
+        HTML with Notes & Code</a>
+        <hr>or<hr/>
+        <a href="https://www.youtube.com/watch?v=uCdliQCk4lE" target="_blank">HTML5 And CSS3 in Depth Full Course</a>
         <br />
         2. <a href="https://www.youtube.com/watch?v=srvUrASNj0s" target="_blank">Introduction To Responsive Web Design - HTML & CSS
             Tutorial</a>
