--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <article style="margin-inline: 30%;">
         1. <a href="https://www.youtube.com/watch?v=HcOc7P5BMi4" target="_blank">HTML Tutorial for Beginners | Complete
         HTML with Notes & Code</a>
-        <hr>or<hr/>
-        <a href="https://www.youtube.com/watch?v=uCdliQCk4lE" target="_blank">HTML5 And CSS3 in Depth Full Course</a>
+        <br/>
+        1.5. <a href="https://www.youtube.com/watch?v=uCdliQCk4lE" target="_blank">HTML5 And CSS3 in Depth Full Course</a> <span>New & Recomended</span>
         <br />
         2. <a href="https://www.youtube.com/watch?v=srvUrASNj0s" target="_blank">Introduction To Responsive Web Design - HTML & CSS
             Tutorial</a>
@@ -44,6 +44,10 @@
         9. <a href="https://www.youtube.com/watch?v=BNmxUzPRYdw" target="_blank">CSS Grid Tutorial For Beginners in Hindi 🔥🔥</a>
         <br />
         10. <a href="https://vsnitclub.github.io/web_design_demo_project/" target="_blank">project 1(animation is optional)</a>
+        <br />
+        11. <a href="https://www.youtube.com/watch?v=ZdJSHEczi_0" target="_blank">project 2 with Tutorial(animation is optional)</a>
+        <br />
+        12. <a href="https://www.youtube.com/watch?v=TId6holGVeY" target="_blank">project 3 with Tutorial(animation is optional)</a>
     </article>
 </main>
 
