--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         1. <a href="https://www.youtube.com/watch?v=HcOc7P5BMi4" target="_blank">HTML Tutorial for Beginners | Complete
         HTML with Notes & Code</a>
         <br/>
-        1.5. <a href="https://www.youtube.com/watch?v=uCdliQCk4lE" target="_blank">HTML5 And CSS3 in Depth Full Course</a> <span>New & Recomended</span>
+        1.5. <a href="https://www.youtube.com/watch?v=uCdliQCk4lE" target="_blank">HTML5 And CSS3 in Depth Full Course</a> <span>(New & Recomended)</span>
         <br />
         2. <a href="https://www.youtube.com/watch?v=srvUrASNj0s" target="_blank">Introduction To Responsive Web Design - HTML & CSS
             Tutorial</a>
